@@ -5,7 +5,8 @@ pump-shortcut=P.U.M.P.
 pump-shortcut=Drag an area around an oil field. The tool will place ghosts for pumpjacks and for the pipes that connect them.
 
 [failure]
-obstructed-oil-well=P.U.M.P. encountered one or more obstructed oil wells. Clear the area first.
-obstructed-pipe=P.U.M.P. was unable to connect all oil wells in the selected area. There might be obstructions (like trees or water) preventing the layout to complete, or the routine of P.U.M.P. can not handle the way these oil wells are layed out.
-missing-resource=P.U.M.P. cannot place pumpjacks, because there are no oil wells found in selected area.
-other-pipes-nearby=P.U.M.P. cannot safely place pumpjacks and pipes, because there are other pipes present within the selected area.
+obstructed-resource=P.U.M.P. found obstructions on selected resources. Clear area of obstructions (trees, rocks, water, other buildinds, etc.)
+obstructed-pipe=P.U.M.P. was unable to layout the pipes. Clear area of obstructions (trees, rocks, water, other buildinds, etc.)
+missing-resource=P.U.M.P. did not find fluid resources in selected area.
+mixed-resources=P.U.M.P. cannot mix resources. 
+other-pipes-nearby=P.U.M.P. aborted, because there are other pipes present within the selected area.
