@@ -25,3 +25,5 @@ Version: 0.1.4
 Date: ?
   Changes:
     - Improve behavior for very small selections.
+  Features:
+    - Add support for any liquid resource for which a suitable miner is available. No hardcoded resource and miner names anymore. 
